fix some endpoints
